# Galaxy-Console

./: CMakeLists.txt  config.py
include/gal/console/: __base.hpp  base.hpp  console.hpp  decl.hpp  scroller.hpp  sstream.hpp
include/gal/console/backend/: PythonStdIoRedirect.hpp  base.hpp  command.hpp  command_set.hpp  python.hpp  unix.hpp
include/gal/console/frontend/: base.hpp  stdio.hpp  store.hpp
include/gal/console/util/: Parent.hpp
src/gal/console/: base.cpp  command.cpp  command_set.cpp  python.cpp  sstream.cpp  stdio.cpp  store.cpp  terminal.cpp  unix.cpp
src/gal/console/backend/: PythonStdIORedirect.cpp  python.cpp
src/gal/console/frontend/: base.cpp  stdio.cpp  store.cpp
test/: CMakeLists.txt
test/python/src/: main.cpp
test/unix/: CMakeLists.txt
test/unix/src/: main.cpp
